[tool.poetry]
name = "py-poetry-test"
version = "1.0.0"
description = "Test project with poetry"
authors = ["Lucas Suzigan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"